--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -66,7 +66,7 @@
                 android:layout_alignParentEnd="true"
                 android:layout_alignTop="@+id/textViewHighscore"
                 android:layout_marginEnd="31dp"
-                android:text="Punkte:"
+                android:text="Points:"
                 android:textSize="13dp" />
 
             <TextView
