--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -101,6 +101,15 @@
                 android:layout_centerHorizontal="true"
                 android:layout_marginBottom="51dp"
                 android:text="Start" />
+
+            <Button
+                android:id="@+id/buttonreset"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentBottom="true"
+                android:layout_centerHorizontal="true"
+                android:layout_marginBottom="111dp"
+                android:text="Reset" />
         </RelativeLayout>
     </LinearLayout>
 
